# Nevsky-Harness

./: .gitignore  ACTIONS.md  BRIEF.md  CROSS_PROJECT_LESSONS.md  FUTURE_PROJECTS_LESSONS.md  LLM_PLAY_GUIDE.md  Nevsky Arts of War Reference.txt  Nevsky Battle and Storm.txt  Nevsky Call to Arms.txt  Nevsky Forces Reference.txt  Nevsky Map.txt  Nevsky Miscellaneous Rules Reference.txt  Nevsky Second Edition Changes.txt  Nevsky Sequence of Play.txt  Nevsky Strategy.txt  Nevsky Strongholds.txt  PASS_2_SUMMARY.md  PLAYTESTS.md  README.md  RULES_DECISIONS.md  RULES_QUESTIONS.md  SMOKE_TEST_FINDINGS.md  STRATEGY_DIGEST.md  pyproject.toml
docs/: llm_interface_playthrough.md
reference/: Nevsky Calender and Veche Reference.txt  Nevsky Scenario Reference.txt  Nevsky Strongholds.txt  Nevsky_Arts_of_War_Reference.txt  Nevsky_Commands.txt  Nevsky_Lords.txt
scripts/: agent_compare_sweep.py  generate_schema.py  llm_self_play.py  llm_tournament.py  replay_capture.py  roundtrip_sweep.py  self_play.py  self_play_sweep.py  strategic_agent.py
tests/: _playthrough_battle.py  _playthrough_forced_combat.py  _playthrough_multi_turn_watland.py  _playthrough_pleskau.py  _playthrough_round11.py  _playthrough_round11_e2e.py  _playthrough_round13_combat_smoke.py  _playthrough_round14_scenario_smoke.py  _playthrough_round19_peipus.py  _playthrough_round19_pleskau.py  _playthrough_round22_long_scenarios.py  _playthrough_round23_watland_llm.py  _playthrough_round26_multi_seed.py  _playthrough_round4.py  _playthrough_round4_veche_legate.py  _playthrough_round5.py  _playthrough_round6_16turn.py  (+170 more)
(+35 files in other folders)
