[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nevsky-harness"
version = "0.1.0"
description = "Python harness for GMT's Nevsky: Teutons and Rus in Collision, 1240-1242."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "FeeSimple1" }]
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
nevsky = "nevsky.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/nevsky"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/nevsky"]
